namespace Characters.Animation
{
    internal class Keys
    {
        public const string UPPER_HIT_PARAMETER_KEY = "upper_hit";
        public const string MIDDLE_HIT_PARAMETER_KEY = "middle_hit";
        public const string LOWER_HIT_PARAMETER_KEY = "lower_hit";
        public const string SOMERSAULT_PARAMETER_KEY = "somersault";
        public const string HORIZONTAL_SPEED_PARAMETER_KEY = "horizontal_speed_normalized";
        public const string VERTICAL_SPEED_PARAMETER_KEY = "vertical_speed_normalized";
        public const string JUMPING_PARAMETER_KEY = "jumping";
        public const string GROUNDED_PARAMETER_KEY = "is_grounded";
        public const string FLYING_PARAMETER_KEY = "is_flying";
    }
}